--- a/docs/styles.css
+++ b/docs/styles.css
@@ -136,10 +136,10 @@ body {
 
 .app-links a {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 40px;
     font-weight: bold;
     margin: 0;
-    color: #000;
+    color: #f5f5f5;
 
 }
 
@@ -152,6 +152,7 @@ body {
     border-radius: 20px;
     text-decoration: none;
 }
+
 
 .app-carousel {
     display: flex;
