--- a/docs/styles.css
+++ b/docs/styles.css
@@ -77,10 +77,15 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: "Roboto", serif;
+    background-image: url("./assets/bg-page.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .container {
     background-color: #f4f4f4;
+    opacity: 0.95;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     width: 50%;
     height: auto;
@@ -88,6 +93,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 20px;
 }
 
 .app-label {
@@ -126,6 +132,9 @@ body {
 .app-name h2 {
     font-size: 20px;
     margin: 0;
+    margin-bottom: 10px;
+    margin-top: -10px;
+    margin-left: 10px;
 }
 
 .app-links {
@@ -153,6 +162,12 @@ body {
     text-decoration: none;
 }
 
+.download-button:hover {
+    background-color: #f5f5f5;
+    color: #007bff;
+    border: 2px solid #007bff;
+    padding: 18px 78px;
+}
 
 .app-carousel {
     display: flex;
@@ -198,6 +213,20 @@ body {
     font-size: 20px;
     font-weight: bold;
     margin: 0 10px;
+}
+
+.app-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.app-footer a {
+    color: #000;
+}
+
+.app-footer a:hover {
+    color: #007bff;
 }
 
 @media (max-width: 1450px) {
