--- a/docs/styles.css
+++ b/docs/styles.css
@@ -94,6 +94,8 @@ body {
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .app-label {
@@ -264,6 +266,10 @@ body {
     .download-button {
         font-size: 30px;
         padding: 15px 40px;
+    }
+
+    .download-button:hover {
+        padding: 13px 38px;
     }
 
     .carousel img {
